[package]
name = "LinuxManagerApiGateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = {version = "0.28", features = ["native-tls-vendored"]}
ssh2 = "0.9.5"
deadpool = "0.10"
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sysinfo = "0.38.3"
actix-web = "4.13.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.4"
toml = "1.0.6"
clap = "4.5.60"
